--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portofolio - Abdul</title>
+  <title>Portofolio - Abdul J</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -12,29 +12,31 @@
     <p>Mechanical Design Engineer</p>
   </header>
 
-  <section class="about">
-    <h2>Tentang Saya</h2>
-    <p>Saya adalah lulusan D3 Teknologi Mekanisasi Pertanian yang berpengalaman dalam desain mekanik, CAD, serta pengoperasian dan perawatan alat mesin pertanian.</p>
-  </section>
+  <main class="container">
+    <section class="about card">
+      <h2>Tentang Saya</h2>
+      <p>Saya adalah lulusan D3 Teknologi Mekanisasi Pertanian yang berpengalaman dalam desain mekanik, CAD, serta pengoperasian dan perawatan alat mesin pertanian. Fokus pada efisiensi dan ergonomi desain alat.</p>
+    </section>
 
-  <section class="projects">
-    <h2>Proyek / Portofolio</h2>
-    <div class="project-item">
-      <h3>Desain Alat Tanam Padi Modular</h3>
-      <p>Proyek tugas akhir mengenai ergonomika pengangkutan modul transmisi alat tanam padi.</p>
-      <a href="#" target="_blank">Lihat Proyek</a>
-    </div>
-  </section>
+    <section class="projects card">
+      <h2>Proyek / Portofolio</h2>
+      <div class="project-item">
+        <h3>Desain Alat Tanam Padi Modular</h3>
+        <p>Proyek tugas akhir tentang ergonomika pengangkutan modul transmisi alat tanam padi sistem Jajar Legowo.</p>
+        <a href="#" target="_blank">Lihat Proyek</a>
+      </div>
+    </section>
 
-  <section class="contact">
-    <h2>Kontak</h2>
-    <p>Email: abdul@email.com</p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/abdulj" target="_blank">linkedin.com/in/abdulj</a></p>
-    <p>GitHub: <a href="https://github.com/Abdul-J-14" target="_blank">github.com/Abdul-J-14</a></p>
-  </section>
+    <section class="contact card">
+      <h2>Kontak</h2>
+      <p>Email: abdul@email.com</p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/abdulj" target="_blank">linkedin.com/in/abdulj</a></p>
+      <p>GitHub: <a href="https://github.com/Abdul-J-14" target="_blank">github.com/Abdul-J-14</a></p>
+    </section>
+  </main>
 
   <footer>
-    <p>© 2025 Abdul J. Dibuat dengan hati.</p>
+    <p>© 2025 Abdul J. Dibuat dengan semangat teknik.</p>
   </footer>
 </body>
 </html>
