--- a/index.html
+++ b/index.html
@@ -1,42 +1,101 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portofolio - Abdul J</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Abdul Aziz Ja'far | Portfolio</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: Arial, sans-serif;
+    }
+    body {
+      background-color: #f4f4f4;
+      color: #333;
+      padding: 40px;
+      max-width: 800px;
+      margin: auto;
+    }
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.3rem;
+    }
+    header h2 {
+      font-size: 1.5rem;
+      color: #555;
+      margin-bottom: 1rem;
+    }
+    header p {
+      font-size: 1rem;
+      color: #666;
+      margin-bottom: 2rem;
+    }
+    section h3 {
+      font-size: 1.3rem;
+      margin-top: 2rem;
+      margin-bottom: 1rem;
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 0.5rem;
+    }
+    ul {
+      list-style: none;
+    }
+    li {
+      margin-bottom: 1.5rem;
+    }
+    a {
+      color: #0077cc;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      margin-top: 3rem;
+      text-align: center;
+      color: #888;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>Abdul J</h1>
-    <p>Mechanical Design Engineer</p>
-  </header>
+  <main>
+    <header>
+      <h1>Abdul Aziz Ja'far</h1>
+      <h2>[Judul Profesi Kamu]</h2>
+      <p>[Deskripsi singkat tentang dirimu akan ditulis di sini]</p>
+    </header>
 
-  <main class="container">
-    <section class="about card">
-      <h2>Tentang Saya</h2>
-      <p>Saya adalah lulusan D3 Teknologi Mekanisasi Pertanian yang berpengalaman dalam desain mekanik, CAD, serta pengoperasian dan perawatan alat mesin pertanian. Fokus pada efisiensi dan ergonomi desain alat.</p>
+    <section>
+      <h3>Projects</h3>
+      <ul>
+        <li>
+          <strong>Project Title 1</strong><br />
+          <span>Deskripsi singkat project 1.</span><br />
+          <a href="#">Lihat Project</a>
+        </li>
+        <li>
+          <strong>Project Title 2</strong><br />
+          <span>Deskripsi singkat project 2.</span><br />
+          <a href="#">Lihat Project</a>
+        </li>
+      </ul>
     </section>
 
-    <section class="projects card">
-      <h2>Proyek / Portofolio</h2>
-      <div class="project-item">
-        <h3>Desain Alat Tanam Padi Modular</h3>
-        <p>Proyek tugas akhir tentang ergonomika pengangkutan modul transmisi alat tanam padi sistem Jajar Legowo.</p>
-        <a href="#" target="_blank">Lihat Proyek</a>
-      </div>
+    <section>
+      <h3>Contact</h3>
+      <p>Email: <a href="mailto:your@email.com">your@email.com</a></p>
+      <p>
+        <a href="#">GitHub</a> |
+        <a href="#">LinkedIn</a>
+      </p>
     </section>
 
-    <section class="contact card">
-      <h2>Kontak</h2>
-      <p>Email: abdul@email.com</p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/abdulj" target="_blank">linkedin.com/in/abdulj</a></p>
-      <p>GitHub: <a href="https://github.com/Abdul-J-14" target="_blank">github.com/Abdul-J-14</a></p>
-    </section>
+    <footer>
+      <p>&copy; 2025 Abdul Aziz Ja'far</p>
+    </footer>
   </main>
-
-  <footer>
-    <p>© 2025 Abdul J. Dibuat dengan semangat teknik.</p>
-  </footer>
 </body>
 </html>
