--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Abdul Aziz Ja'far | Mechanical Engineer</title>
+  <title>Abdul Aziz Ja'far | MECHANICAL TECHNICIAN/DRAFTER ENGINEERING</title>
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -34,7 +34,7 @@
 
     <section class="contact">
       <h3>Kontak</h3>
-      <p>Email: <a href="mailto:aziz@example.com">aziz@example.com</a></p>
+      <p>Email: <a href="mailto:aziz@example.com">abdulazizjafar014@gmail.com</a></p>
       <p>
         <a href="#">GitHub</a> |
         <a href="#">LinkedIn</a>
