--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Abdul Aziz Ja'far | MECHANICAL TECHNICIAN/DRAFTER ENGINEERING</title>
+  <title>Abdul Aziz Ja'far | MECHANICAL TECHNICIAN/ DRAFTER ENGINEERING</title>
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -13,7 +13,7 @@
     <div class="hero-text">
       <h1>Abdul Aziz Ja'far</h1>
       <h2>Mechanical Engineer</h2>
-      <p>Saya tertarik pada desain teknik, alat berat, dan simulasi mekanik. Portofolio ini menampilkan beberapa karya dan proyek saya.</p>
+      <p>Lulusan Diploma III Politeknik Pertanian Indonesia dengan jurusan Teknologi Mekanisasi Pertanian memiliki keterampilan berpikir kritis yang kuat, rasa tanggung jawab, serta kemampuan untuk beradaptasi dan berkembang secara profesional. Sangat termotivasi untuk mempelajari hal-hal baru dan memiliki orientasi karir yang kuat di bidang teknik. Dengan pengalaman langsung sebagai Teknisi Service dan Teknisi Manufaktur, siap untuk peran teknis. Selain itu, partisipasi aktif mereka dalam organisasi kampus dan magang telah meningkatkan keterampilan kerja sama tim, kepemimpinan, dan keterampilan praktis.</p>
     </div>
   </header>
 
@@ -34,7 +34,7 @@
 
     <section class="contact">
       <h3>Kontak</h3>
-      <p>Email: <a href="mailto:aziz@example.com">abdulazizjafar014@gmail.com</a></p>
+      <p>Email: <a href="mailto:aziz@example.com">aziz@example.com</a></p>
       <p>
         <a href="#">GitHub</a> |
         <a href="#">LinkedIn</a>
@@ -46,4 +46,4 @@
     <p>&copy; 2025 Abdul Aziz Ja'far</p>
   </footer>
 </body>
-</html>
+</html>   .
